# tm-newapi-balance

./: BalanceItem.cpp  BalanceItem.h  CMakeLists.txt  Plugin.cpp  Plugin.h  PluginInterface.h  README.md  UsedItem.cpp  UsedItem.h  dllmain.cpp  tm-newapi-balance.ini
.github/workflows/: build.yml
docs/: newapi.md
